# vimi5

./: .gitignore  CMakeLists.txt  README  README.markdown  aboutdialog.cpp  aboutdialog.h  cheggitview.cpp  cheggitview.h  collection.cpp  collection.h  collectionview.cpp  collectionview.h  config.cpp  config.h  infopanel.cpp  infopanel.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  tagdialog.cpp  tagdialog.h  tagfetchdialog.h  videofilterproxymodel.cpp  videofilterproxymodel.h  vimi.pro
images/: images.qrc
qml/: ActressPanel.qml  BusyWidget.qml  Button.qml  ClickableArea.qml  ControlBar.qml  HelpDialog.qml  InputBox.qml  Screenshot.qml  ScrollBar.qml  SeekBar.qml  Seekbar.qml  SideBar.qml  TagList.qml  TitleText.qml  Toolbar.qml  VideoElement.qml  VideoPlayer.qml  main.qml
src/: aboutdialog.cpp  aboutdialog.h  cheggitview.cpp  cheggitview.h  collection.cpp  collection.h  collectionview.cpp  collectionview.h  config.cpp  config.h  cookiestorage.cpp  cookiestorage.h  coverlabel.cpp  coverlabel.h  coverloader.cpp  coverloader.h  covermaker.cpp  covermaker.h  favouritetagdialog.cpp  favouritetagdialog.h  infopanel.cpp  infopanel.h  main.cpp  mainwindow.cpp  mainwindow.h  settingsdialog.cpp  settingsdialog.h  src.pro  tagdialog.cpp  tagdialog.h  tagfetchdialog.cpp  tagfetchdialog.h  tagreplacementdialog.cpp  tagreplacementdialog.h  version.h  video.cpp  video.h  videofilterproxymodel.cpp  videofilterproxymodel.h  videoframedumper.cpp  (+4 more)
src/images/: images.pro  images.qrc
